# whey-pth

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  configuration.rst  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: whey-pth.rst
tests/: test_whey_pth.py
tests/test_whey_pth_/: test_build_additional_files.yml  test_build_complete_COMPLETE_A_.yml  test_build_complete_COMPLETE_B_.yml  test_build_complete_foreman_COMPLETE_A_.yml
whey_pth/: __init__.py
